--- a/css/style.css
+++ b/css/style.css
@@ -1,66 +1,64 @@
-#main-header {
-  height: 10vh;
-  font-size: 60px;
-  font-family: 'Galada', cursive;
+.main-header {
+  height: 5vh;
   color: blue;
-  background-color: #99DDC8;
+  background-color: black;
+}
+#nav-bar{
+  display: flex;
+  justify-content: flex-start;
+}
+.nav-left{
+  width: 20%;
+}
+.nav-mid{
+  width: 30%;
+}
+.nav-right{
+  width: 50%;
+}
+ul li{
+  align-items: stretch;
+  display: inline;
+  color: white;
+}
+.nav-right ul li a{
+  text-decoration: none;
+  color: white;
+  margin: 0 0 3px 0;
+
 }
 body{
   font-family: sans-serif;
 
 }
-top {
-  height: 5vh;
-}
-li{
-  display: inline-block;
-  padding-right: 10px;
-  margin: 0;
-}
-ul a{
-  text-decoration: none;
-}
 
-ul a:hover{
+.nav-right ul a:hover{
   text-decoration: underline;
-  font-size: 20px;
+  font-size: 30px;
 }
 .hero {
   display: flex;
-  height: 50vh;
-  width: 50vh;
+  height: 40vh;
+  width: 100%;
   justify-content: center;
-  background-image: url("../img/product6.jpg");
+  background-image: url("../img/prod11.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
-#header {
+.hero #header {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: left;
 }
 .hero header{
   font-family: 'Galada', cursive;
-  color: blue;
+  color: white;
+  font-size: 50px;
+  align-self: center;
 }
-.three-column-section{
-  display: flex;
-  justify-content: space-around;
-
-  }
-.three-column-section first-column{
-  height: 30vh;
-  width: 30%;
-
-}
-.three-column-section second-column{
-  height: 30vh;
-  width: 40%;
-}
-.three-column-section third-column{
-  height: 30vh;
-  width: 30%;
+#container1{
+  border:1px solid #333;
 }
 
 footer {
@@ -71,7 +69,7 @@ footer {
   justify-content: center;
 }
 footer i{
-  
+
   color: white;
   align-items: center;
 }
