--- a/css/style.css
+++ b/css/style.css
@@ -8,19 +8,9 @@
 }
 #nav-bar{
   display: flex;
-  justify-content: flex-start;
-}
-.nav-left{
-  width: 20%;
-}
-.nav-mid{
-  width: 30%;
-}
-.nav-right{
-  width: 50%;
+  justify-content: space-around;
 }
 ul li{
-  align-items: stretch;
   display: inline;
   color: white;
 }
@@ -32,7 +22,6 @@ ul li{
 }
 body{
   font-family: sans-serif;
-
 }
 
 .nav-right ul a:hover{
@@ -42,7 +31,7 @@ body{
 .hero {
   display: flex;
   height: 40vh;
-  width: 100%;
+  max-width: 100%;
   justify-content: center;
   background-image: url("../img/prod11.jpg");
   background-position: center;
@@ -60,10 +49,22 @@ body{
   font-size: 50px;
   align-self: center;
 }
-#container1{
-  border:1px solid #333;
+.three-column-section{
+  display: flex;
+  flex-flow: wrap;
+  justify-content: space-around;
+  max-width: 100%;
+  background-color: lightgreen;
+}
+.three-column-section img{
+  height: 20vh;
+  width: 15vw;
 }
 
+#container1 .grid_4 img{
+  width:45%;
+  height:30%;
+}
 footer {
   display: flex;
   height: 5vh;
@@ -72,14 +73,18 @@ footer {
   justify-content: center;
 }
 footer i{
-
+  margin: 5px 10px;
   color: white;
   align-items: center;
 }
 /* On screens that are 600px wide or less, make the menu links stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
-    .nav-right {
-        float: none;
-        width: 100%;
+    .three-column-section{
+      flex-direction: column;
+      align-items: center;
+    }
+    #nav-bar .nav-right ul{
+      flex-direction: column;
+      display: inline-flex;
     }
 }
