--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@
   top: 0%;
   width: 100%;
 }
+#nav-logo img{
+  height: 4vh;
+  width: auto;
+}
 #nav-bar{
   display: flex;
   justify-content: space-around;
@@ -60,10 +64,29 @@ body{
   height: 20vh;
   width: 15vw;
 }
+h2 {
+  font-weight: bold;
+}
+#all-products{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  align-content: space-between;
+  background-color: pink;
+}
+.products{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#all-products .products img{
+  width:350px;
+  height:350px;
+}
 
-#container1 .grid_4 img{
-  width:45%;
-  height:30%;
+#product-name, .products p {
+  font-weight: bold;
 }
 footer {
   display: flex;
@@ -79,12 +102,14 @@ footer i{
 }
 /* On screens that are 600px wide or less, make the menu links stack on top of each other instead of next to each other */
 @media screen and (max-width: 600px) {
+    #nav-bar .nav-right ul{
+    flex-direction: column;
+    display: inline-flex;
+  }
     .three-column-section{
       flex-direction: column;
-      align-items: center;
     }
-    #nav-bar .nav-right ul{
+    #all-products{
       flex-direction: column;
-      display: inline-flex;
     }
 }
